Meals Consumer Working - added useMeals: API consumer - added UI components - added some static data - added some basic style.
updated git ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,12 @@ yarn-error.log*
 # IDEA
 .idea
 /.idea
-/.idea/**
+/.idea/*.*
+/.idea/misc.xml
+/.idea/modules.xml
 
 # VSCODE
 .code
 ./.code
 ./.code/*
-/.idea/
+/.code/
