--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,17 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# IDEA
+.idea
+/.idea
+/.idea/*.*
+/.idea/misc.xml
+/.idea/modules.xml
+
+# VSCODE
+.code
+./.code
+./.code/*
+/.code/
