Componets - better code organization, file layout, naming. - better TS support. (callbacks, JSX, correct typing). - code slicing, better isolation. - more dumb components/pure - better encapsulation.
UI
- optimized
- enhaced experience
- better Ux/UI
- more ChakraUI

--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "meals",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.80",
     "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@types/react-dom": "^18.2.19"
+  },
+  "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@yaireo/console-colors": "^1.2.0",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
