--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "meals",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,13 +16,17 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.3",
+    "@chakra-ui/theme": "^3.3.1",
+    "@chakra-ui/theme-tools": "^2.1.2",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@yaireo/console-colors": "^1.2.0",
+    "@fontsource/open-sans": "^5.0.24",
+    "@fontsource/raleway": "^5.0.15",
     "classnames": "^2.5.1",
-    "framer-motion": "^11.0.5",
+    "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
