--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/react-dom": "^18.2.19"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/theme": "^3.3.1",
     "@chakra-ui/theme-tools": "^2.1.2",
@@ -30,7 +29,9 @@
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@react-buddy/ide-toolbox": "^2.4.0",
+    "@react-buddy/palette-chakra-ui": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
