--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.19"
   },
   "dependencies": {
+    "sass": "^1.71.1",
     "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/theme": "^3.3.1",
     "@chakra-ui/theme-tools": "^2.1.2",
